2020-11-05  Angelos Oikonomopoulos  <angelos@igalia.com>

        Test that TransferToS3 is skipped properly
        https://bugs.webkit.org/show_bug.cgi?id=218610

        Reviewed by Aakash Jain.

        I.e. when not running on steps.EWS_BUILD_HOSTNAME.

        * CISupport/ews-build/steps_unittest.py:

2020-11-05  Angelos Oikonomopoulos  <angelos@igalia.com>

        Don't mark TransferToS3 as failed if it was skipped
        https://bugs.webkit.org/show_bug.cgi?id=218606

        Reviewed by Aakash Jain.

        * CISupport/ews-build/steps.py:
        (TransferToS3.getResultSummary):

2020-11-05  Rob Buis  <rbuis@igalia.com>

        Update my information in contributors.json
        https://bugs.webkit.org/show_bug.cgi?id=218608

        Reviewed by Carlos Garcia Campos.

        Update my information in contributors.json to change the autocomplete email address to be Igalia.

        * Scripts/webkitpy/common/config/contributors.json:

2020-11-04  Jonathan Bedard  <jbedard@apple.com>

        [webkitscmpy] Add checkout command
        https://bugs.webkit.org/show_bug.cgi?id=218360
        <rdar://problem/70828312>

        Reviewed by Dewei Zhu.

        * Scripts/libraries/webkitscmpy/webkitscmpy/local/git.py:
        (Git.checkout): Checkout repository to specified commit, branch or tag.
        * Scripts/libraries/webkitscmpy/webkitscmpy/local/scm.py:
        (Scm.checkout): Checkout repository to specified commit, branch or tag.
        * Scripts/libraries/webkitscmpy/webkitscmpy/local/svn.py:
        (Svn.checkout): Checkout repository to specified commit, branch or tag.
        * Scripts/libraries/webkitscmpy/webkitscmpy/mocks/local/git.py:
        (Git.__init__): Add concept of HEAD commit, mock `git checkout` command.
        * Scripts/libraries/webkitscmpy/webkitscmpy/mocks/local/svn.py:
        (Svn.__init__): Add concept of HEAD commit, mock `svn up -r *`.
        (Svn.branch): The HEAD's branch is the current branch.